force-app/main/default/objects/Income_Tax_Bracket__mdt/Income_Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <label>Income Tax Bracket</label>
    <pluralLabel>Income Tax Brackets</pluralLabel>
</CustomObject>