force-app/main/default/objects/Income_Tax_Bracket__mdt/fields/Filling_Status__c.field-meta.xml
<CustomField>
    <fullName>Filling_Status__c</fullName>
    <label>Filling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Married filing jointly</fullName>
            </value>
            <value>
                <fullName>Married filing separately</fullName>
            </value>
            <value>
                <fullName>Head of household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>