force-app/main/default/objects/Income_Tax_Bracket__mdt/fields/Low_Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Low_Tax_Bracket__c</fullName>
    <label>Low Tax Bracket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>