force-app/main/default/objects/Income_Tax_Bracket__mdt/fields/Standard_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Standard_Deduction__c</fullName>
    <label>Standard Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>